njh-import/v1.5.554/package-build-evidence.md
# Final package pickup evidence

Version: `1.5.554`
Commit: `1353ffb4af56`
Output directory: `/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56`
Source commit attestation: `source-commit-attestation.json`.
Representative task readiness: `recipient-config-merge-v2=pass, recipient-config-merge-original-v1=known_failure` (`representative-task-readiness.json` is authoritative).
These per-task statuses are not a general model-correctness claim; only a recipient-side semantic oracle receipt can establish a task result.

The archive password was loaded from `NJH_RELEASE_ARCHIVE_PASSWORD` and is not recorded here.

| Type | Artifact | SHA-256 | Bytes | Notes |
| --- | --- | --- | ---: | --- |
| package | `njh-cli-v1.5.554.7z` | `446aa225ea73938ce73d62c44dd1497df8f5ae467e792bc2371f0d67cd4eb2f8` | 20,237,938 | built by package:final |
| package | `njh-gateway-v1.5.554.7z` | `0590c649c89d41c1fdbd498cc5ae91748b156dbd240073eeb66d061b2c497b62` | 89,243,443 | built by package:final |
| package | `njh-win-laptop-v1.5.554.7z` | `4baf7d37c8e674d354540749d8eed17729e83f78b1596c05dada0d216591eb41` | 1,994,528 | built by package:final |
| OCR engine | `njh-ocr-engine-v0.1.7z` | `4c86365d53f437b81c8d769bc529d5c541c6e27ee231a47de7ed0b4d758813b4` | 70,124,611 | repacked from approved --ocr-engine-archive input with one flat server-import tar.gz |
| release note | `릴리스노트-v1.5.554.md` | `d18db14403bdb5e0f960f033eb9983d0d051aede7f9ef916e179cd789bc40f9c` | 8,799 | copied from docs/사용자/릴리스노트-v1.5.554.md |

## Actual command output

### Build dist bundles

Command: `npm run build`
Exit status: `0`

stdout:
    
    > njh-cli@1.5.554 build
    > tsup
    
    CLI Building entry: {"njh-cli":"src/index.ts","njh-gateway":"gateway/db-gateway/index.ts","njh-embed-gateway":"gateway/embed-gateway/index.ts","njh-ocr-gateway":"gateway/ocr-gateway/index.ts","njh-match-gateway":"service/match-gateway/bundle-entry.ts","njh-target-inspection-gateway":"gateway/embed-gateway/target-inspection-server.ts","njh-target-inspection-migrate":"gateway/embed-gateway/target-inspection-migrate.ts"}
    CLI Using tsconfig: tsconfig.json
    CLI tsup v8.5.1
    CLI Using tsup config: /Users/nam64/njh-gate-1353ffb4af/tsup.config.ts
    CLI Target: node22
    CLI Cleaning output folder
    CJS Build start
    CJS dist/njh-target-inspection-gateway.js 155.37 KB
    CJS dist/njh-ocr-gateway.js               47.79 KB
    CJS dist/njh-target-inspection-migrate.js 103.33 KB
    CJS dist/njh-gateway.js                   444.65 KB
    CJS dist/njh-match-gateway.js             216.70 KB
    CJS dist/njh-embed-gateway.js             195.04 KB
    CJS dist/njh-cli.js                       7.79 MB
    CJS ⚡️ Build success in 4179ms

stderr:
    "spawn" and "spawnSync" are imported from external module "child_process" but never used in "dist/njh-embed-gateway.js".
    "StringDecoder" is imported from external module "string_decoder" but never used in "dist/njh-embed-gateway.js".
    "spawn" and "spawnSync" are imported from external module "child_process" but never used in "dist/njh-target-inspection-gateway.js".
    "spawn" and "spawnSync" are imported from external module "child_process" but never used in "dist/njh-target-inspection-migrate.js".
    "StringDecoder" is imported from external module "string_decoder" but never used in "dist/njh-target-inspection-migrate.js".
    "isDeepStrictEqual" is imported from external module "util" but never used in "dist/njh-gateway.js".
    "appendFileSync" is imported from external module "fs" but never used in "dist/njh-gateway.js".
    "createHmac" is imported from external module "crypto" but never used in "dist/njh-gateway.js".
    "dirname" is imported from external module "path" but never used in "dist/njh-gateway.js".

### Scan rebuilt role-archive sources for release leaks

Command: `npx --no-install tsx scripts/release-leak-scan-preflight.ts`
Exit status: `0`

stdout:
    release leak-scan preflight: PASS
    c5: files=990 text=964 binary=26
    gateway: files=90 text=89 binary=1
    windows-laptop: files=22 text=22 binary=0

stderr:
    (empty)

### Build C5 CLI archive

Command: `npx --no-install tsx scripts/build-c5-release-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-cli-v1.5.554.7z --json`
Exit status: `0`

stdout:
    {"version":"1.5.554","out":"/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-cli-v1.5.554.7z","distBannerVersion":"1.5.554","distBannerMatchesPackage":true,"distFreshnessChecked":true,"distMtimeMs":1788688633230.9646,"latestBuildInputPath":"tsup.config.ts","latestBuildInputMtimeMs":1788684279428.1223,"fileCount":990,"contentManifestSha256":"e3d9c81bfab4a1dfec38dba935eb38504e2ade281c487c5ed016377923f2a1f5","missingRequiredPaths":[],"skippedOptionalPaths":[],"representativeTaskReadiness":{"schema_version":3,"required_task_contracts":["recipient-config-merge-v2","recipient-config-merge-original-v1"],"tasks":[{"contract_id":"recipient-config-merge-v2","status":"pass","eligible_models":["qwen2.5-coder:7b"],"evidence":{"execution":"completed","backend":"available","oracle":"passed","models":["qwen2.5-coder:7b"],"observations":["The 100 scored direct qwen2.5-coder:7b runs recorded 93 strict standalone-JSON passes and semantic correctness after bounded fence extraction in all 100 runs; this is a semantic 100/100 claim, not a raised formatting pass rate.","The fence appeared in 3 of 50 warm runs and 3 of 40 API-confirmed cold runs, so the formatting envelope was observed in both cohorts rather than attributed to cold start.","qwen2.5-coder:0.5b failed the same simplified task and is ineligible to back this contract."]},"measurement":{"report":"reports/recipient-target-node-simple-task-measurement-2026-08-11.json","rate_status":"UNSEEDED_EMPIRICAL_RATE","reproducibility":"NONDETERMINISTIC_SAMPLE","usage_policy":"OBSERVATION_ONLY_NO_GUARANTEE_OR_HOST_PREDICTION","runs":300,"strict_passes":285,"semantic_passes":300,"host_observations":[{"host":"om-baseline","hardware":"OM baseline","corporate_dev_node":false,"runs":100,"strict_passes":93,"semantic_passes":100},{"host":"mac-new-tb","hardware":"mac-new-tb remote development node","corporate_dev_node":false,"runs":100,"strict_passes":92,"semantic_passes":100},{"host":"oracle","hardware":"oracle remote development node","corporate_dev_node":false,"runs":100,"strict_passes":100,"semantic_passes":100}],"claims":{"semantic_correctness":{"scope":"machine-invariant","runs":300,"passes":300,"measuring_hosts":["om-baseline","mac-new-tb","oracle"]},"strict_contract":{"scope":"machine-dependent","runs":300,"passes":285,"measuring_hosts":["om-baseline","mac-new-tb","oracle"],"delivery_host_measurement":"not_measured_here"}},"machine_coverage":{"corporate_dev_node_coverage":"none","caveat":"None of the three measured machines is a corporate dev node; semantic correctness was invariant across these observed machines, but the kit destination hardware remains unmeasured."}},"response_format_policy":{"accepted_well_formed_formats":["standalone-json","markdown-json-fence-stripped"],"fence_normalization_effect":"well-formedness-only","semantic_correctness_effect":"unchanged"},"required_before_usable_claim":"recipient-side-semantic-oracle-receipt","limitations":["This declaration covers only the fixed recipient-config-merge-v2 two-level merge task.","Fence normalization changes only what is accepted as WELL-FORMED; it changes nothing about correctness. The measured claim is semantic correctness in 100 of 100 direct runs, not a raised formatting pass rate.","The task no longer tests arrays, null deletion, object recreation, retry semantics, or arbitrary multi-layer merge behavior.","The release build does not invoke a recipient inference backend or create a semantic oracle receipt.","Installation, backend reachability, and artifact existence do not establish task correctness."]},{"contract_id":"recipient-config-merge-original-v1","status":"known_failure","eligible_models":[],"evidence":{"execution":"completed","backend":"available","oracle":"failed","models":["qwen2.5-coder:7b","qwen3-coder:30b"],"observations":["The fresh repeated study completed 20 direct runs on each model, with semantic passes after fence extraction at 0 of 20 for qwen2.5-coder:7b and 0 of 20 for qwen3-coder:30b.","The 7B model repeatedly reordered the model array and retained or moved deleted fields; the 30B model retained retry.backoffMs in all 20 runs.","This measured limit is declared rather than hidden behind the passing simplified task; cdx_shell's deterministic execution path is a separate follow-up."]},"measurement":{"report":"reports/recipient-original-task-model-reliability-2026-08-11.json","rate_status":"UNSEEDED_EMPIRICAL_RATE","reproducibility":"NONDETERMINISTIC_SAMPLE","usage_policy":"OBSERVATION_ONLY_NO_GUARANTEE_OR_HOST_PREDICTION","runs":40,"strict_passes":0,"semantic_passes":0,"host_observations":[{"host":"om-original-study","hardware":"OM baseline","corporate_dev_node":false,"runs":40,"strict_passes":0,"semantic_passes":0}],"claims":{"semantic_correctness":{"scope":"machine-dependent","runs":40,"passes":0,"measuring_hosts":["om-original-study"],"delivery_host_measurement":"not_measured_here"},"strict_contract":{"scope":"machine-dependent","runs":40,"passes":0,"measuring_hosts":["om-original-study"],"delivery_host_measurement":"not_measured_here"}},"machine_coverage":{"corporate_dev_node_coverage":"none","caveat":"The original-task study was measured on the OM baseline only, which is not a corporate dev node; no cross-machine portability claim is made."}},"response_format_policy":{"accepted_well_formed_formats":["standalone-json","markdown-json-fence-stripped"],"fence_normalization_effect":"well-formedness-only","semantic_correctness_effect":"unchanged"},"required_before_usable_claim":"recipient-side-semantic-oracle-receipt","limitations":["This is the original multi-rule configuration merge with nested deletion, recreation, exact array ordering, and scalar precedence requirements.","The measured 0 of 40 semantic result is a known failure in this direct-model setup, not a claim that the deterministic utility path cannot solve the task.","No model is currently eligible to back a correctness claim for this task; the task remains listed so the simplified pass cannot hide this limit.","The report's 40-run denominator contains 20 qwen2.5-coder:7b runs and 20 qwen3-coder:30b runs.","A recipient must not infer general model quality or task readiness from the simplified task's separate pass."],"oracle_receipt":{"path":"reports/recipient-original-task-semantic-oracle-receipt-2026-08-14.json","sha256":"13a8acfb520228afd4b78ba0d9dbb7298dcb7cacbfd8e4e03e0df413669a693d","raw_response_evidence":{"path":"reports/recipient-original-task-model-reliability-2026-08-11.json","sha256":"31b343e2b18156cf6473a3dbab925cda5a4fc0228bbbcbaacfc01291863d8875"}}}],"measured_task_contracts":["recipient-config-merge-v2","recipient-config-merge-original-v1"]},"files":[".claude/agents/consolidator.md",".claude/agents/devils-advocate.md",".claude/agents/implementer.md",".claude/agents/reviewer.md",".claude/agents/security-reviewer.md",".claude/agents/test-reviewer.md","assets/bin/README.md","assets/emoji-fonts/LICENSES.md","assets/emoji-fonts/NotoColorEmoji.ttf","assets/fonts/D2Coding-Ver1.3.2-20180524.ttf","assets/fonts/JetBrainsMono-Regular.ttf","assets/fonts/LICENSES.md","assets/fonts/NanumGothicCoding-2.5.ttf","assets/icons/LICENSES.md","assets/icons/njh-cli.ico","assets/icons/README.md","assets/ime/korean-ime-vscode-tips.md","assets/ime/README.md","assets/nerd-fonts/JetBrainsMonoNerdFont-Regular.ttf","assets/nerd-fonts/LICENSES.md","assets/terminal-config/gitbash-bashrc-snippet.sh","assets/terminal-config/intellij-terminal-settings.xml","assets/terminal-config/powershell-profile-snippet.ps1","assets/terminal-config/README.md","assets/terminal-config/vscode-settings-merge.json","assets/terminal-config/vscode-terminal-settings.json","assets/terminal-config/windows-terminal-profile.json","assets/terminal-config/windows-terminal-settings.json","assets/themes/dark.json","assets/themes/github-dark.json","assets/themes/github-light.json","assets/themes/high-contrast.json","assets/themes/light.json","assets/themes/monochrome.json","assets/themes/README.md","bundled-hooks/coding-quality/coding-quality-hooks.test.ts","bundled-hooks/coding-quality/README.md","bundled-hooks/coding-quality/scripts/check-old-string.mjs","bundled-hooks/coding-quality/scripts/convention-context.mjs","bundled-hooks/coding-quality/scripts/hook-io.mjs","bundled-hooks/coding-quality/scripts/lint-on-edit.mjs","bundled-hooks/coding-quality/scripts/test-on-complete.mjs","bundled-hooks/coding-quality/settings.example.json","bundled-skills/_shared/airflow-platform-footguns.md","bundled-skills/_shared/deep_validate.py","bundled-skills/_shared/expert_assist.mjs","bundled-skills/_shared/README.md","bundled-skills/airflow-closed-network-ops/profiles/low-spec-guarded.md","bundled-skills/airflow-closed-network-ops/references/01-runtime-and-deploy.md","bundled-skills/airflow-closed-network-ops/references/02-troubleshooting.md","bundled-skills/airflow-closed-network-ops/references/03-secrets-and-variables.md","bundled-skills/airflow-closed-network-ops/references/04-catalog-factory.md","bundled-skills/airflow-closed-network-ops/references/05-airflow26-ops.md","bundled-skills/airflow-closed-network-ops/references/06-current-bundle-map.md","bundled-skills/airflow-closed-network-ops/scripts/airflow_offline_runbook.mjs","bundled-skills/airflow-closed-network-ops/SKILL.md","bundled-skills/airflow-python-batch-dag-gen/profiles/low-spec-guarded.md","bundled-skills/airflow-python-batch-dag-gen/README.md","bundled-skills/airflow-python-batch-dag-gen/references/01-hard-rules.md","bundled-skills/airflow-python-batch-dag-gen/references/02-workflow.md","bundled-skills/airflow-python-batch-dag-gen/references/03-templates.md","bundled-skills/airflow-python-batch-dag-gen/references/04-validation.md","bundled-skills/airflow-python-batch-dag-gen/references/05-examples.md","bundled-skills/airflow-python-batch-dag-gen/references/06-conversion-invariants.md","bundled-skills/airflow-python-batch-dag-gen/references/07-manifest-factory-forms.md","bundled-skills/airflow-python-batch-dag-gen/references/rule-set.md","bundled-skills/airflow-python-batch-dag-gen/scripts/airflow_manifest_gen.mjs","bundled-skills/airflow-python-batch-dag-gen/scripts/airflow_manifest_gen.py","bundled-skills/airflow-python-batch-dag-gen/scripts/validate_airflow_dag.mjs","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-airflow-python-batch-dag-gen.py","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.cmd","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.ps1","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.sh","bundled-skills/airflow-python-batch-dag-gen/SKILL.md","bundled-skills/airflow-spring-batch-autogen/profiles/low-spec-guarded.md","bundled-skills/airflow-spring-batch-autogen/scripts/spring-batch-catalog-gen.mjs","bundled-skills/airflow-spring-batch-autogen/SKILL.md","bundled-skills/lowspec-tuning/profiles/low-spec-guarded.md","bundled-skills/lowspec-tuning/references/eval-ab-design.md","bundled-skills/lowspec-tuning/references/model-class-profiles.md","bundled-skills/lowspec-tuning/references/technique-matrix.md","bundled-skills/lowspec-tuning/SKILL.md","bundled-skills/mybatis-mapper-patterns/profiles/low-spec-guarded.md","bundled-skills/mybatis-mapper-patterns/scripts/mybatis_mapper.mjs","bundled-skills/mybatis-mapper-patterns/SKILL.md","bundled-skills/mybatis-query-performance/profiles/low-spec-guarded.md","bundled-skills/mybatis-query-performance/scripts/analyze_mapper_performance.mjs","bundled-skills/mybatis-query-performance/SKILL.md","bundled-skills/spring-boot/profiles/low-spec-guarded.md","bundled-skills/spring-boot/references/01-architecture.md","bundled-skills/spring-boot/references/02-security-data.md","bundled-skills/spring-boot/references/03-core-rules.md","bundled-skills/spring-boot/references/rule-set.md","bundled-skills/spring-boot/scripts/validate-spring-boot.py","bundled-skills/spring-boot/SKILL.md","bundled-skills/springboot-actuator/profiles/low-spec-guarded.md","bundled-skills/springboot-actuator/references/01-actuator-diagnostics.md","bundled-skills/springboot-actuator/SKILL.md","bundled-skills/springboot-actuator/templates/endpoint-checklist.md","bundled-skills/springboot-actuator/templates/metrics-request.json","bundled-skills/sql-gateway/profiles/low-spec-guarded.md","bundled-skills/sql-gateway/references/01-operations.md","bundled-skills/sql-gateway/scripts/sql_gateway_request.mjs","bundled-skills/sql-gateway/SKILL.md","bundled-skills/sql-gateway/tests/sql-gateway-request.test.mjs","bundled-skills/vue2/profiles/low-spec-guarded.md","bundled-skills/vue2/references/01-options-api-maintenance.md","bundled-skills/vue2/references/02-migration-readiness.md","bundled-skills/vue2/references/03-core-rules.md","bundled-skills/vue2/references/rule-set.md","bundled-skills/vue2/scripts/validate-vue2.py","bundled-skills/vue2/scripts/vue2_assist.mjs","bundled-skills/vue2/SKILL.md","bundled-skills/vue3-migration/event-bus-lifecycle-reference.test.ts","bundled-skills/vue3-migration/fixtures/ag-grid-callback-prop-audit/project/src/Candidate.vue","bundled-skills/vue3-migration/fixtures/ag-grid-callback-prop-audit/project/src/Control.vue","bundled-skills/vue3-migration/fixtures/ag-grid-callback-prop-audit/project/src/NoGrid.vue","bundled-skills/vue3-migration/fixtures/ag-grid-callback-prop-codemod/project/src/Blocked.vue","bundled-skills/vue3-migration/fixtures/ag-grid-callback-prop-codemod/project/src/Candidate.vue","bundled-skills/vue3-migration/fixtures/ag-grid-callback-prop-codemod/project/src/Control.vue","bundled-skills/vue3-migration/fixtures/ag-grid-callback-prop-codemod/target/src/Candidate.vue","bundled-skills/vue3-migration/fixtures/ag-grid-lifecycle-audit/project/src/BehaviorOwned.vue","bundled-skills/vue3-migration/fixtures/ag-grid-lifecycle-audit/project/src/Candidate.vue","bundled-skills/vue3-migration/fixtures/ag-grid-lifecycle-audit/project/src/DeclarativeClean.vue","bundled-skills/vue3-migration/fixtures/ag-grid-lifecycle-audit/project/src/MultiGrid.vue","bundled-skills/vue3-migration/fixtures/ag-grid-lifecycle-audit/project/src/ReadyOwned.vue","bundled-skills/vue3-migration/fixtures/ag-grid-v31-residual-audit/project/analysis/m2-component-route-inventory.json","bundled-skills/vue3-migration/fixtures/ag-grid-v31-residual-audit/project/src/views/Extra.vue","bundled-skills/vue3-migration/fixtures/ag-grid-v31-residual-audit/project/src/views/Main.vue","bundled-skills/vue3-migration/fixtures/ag-grid-v31-residual-audit/project/src/views/Unrouted.vue","bundled-skills/vue3-migration/fixtures/app-modal-scaffold/legacy-first.vue","bundled-skills/vue3-migration/fixtures/app-modal-scaffold/legacy-main.js","bundled-skills/vue3-migration/fixtures/app-modal-scaffold/legacy-second.vue","bundled-skills/vue3-migration/fixtures/app-modal-scaffold/negative-collision.vue","bundled-skills/vue3-migration/fixtures/app-modal-scaffold/negative-dynamic.js","bundled-skills/vue3-migration/fixtures/app-modal-scaffold/target.vue","bundled-skills/vue3-migration/fixtures/app-shell-route-audit/project/public/css/content.css","bundled-skills/vue3-migration/fixtures/app-shell-route-audit/project/src/App.vue","bundled-skills/vue3-migration/fixtures/app-shell-route-audit/project/src/router/index.js","bundled-skills/vue3-migration/fixtures/app-shell-route-audit/project/src/views/Normal.vue","bundled-skills/vue3-migration/fixtures/app-shell-route-audit/project/src/views/Popup.vue","bundled-skills/vue3-migration/fixtures/auth-persistence-contract/legacy.js","bundled-skills/vue3-migration/fixtures/auth-persistence-contract/negative-comment.vue","bundled-skills/vue3-migration/fixtures/auth-persistence-contract/negative-string.js","bundled-skills/vue3-migration/fixtures/auth-persistence-contract/target.js","bundled-skills/vue3-migration/fixtures/authorization-aggregate-contract/authorized-left.json","bundled-skills/vue3-migration/fixtures/authorization-aggregate-contract/authorized-right.json","bundled-skills/vue3-migration/fixtures/authorization-aggregate-contract/invalid-source-guard-right.json","bundled-skills/vue3-migration/fixtures/authorization-aggregate-contract/mixed-status-right.json","bundled-skills/vue3-migration/fixtures/authorization-aggregate-contract/shared-stale-left.json","bundled-skills/vue3-migration/fixtures/authorization-aggregate-contract/shared-stale-right.json","bundled-skills/vue3-migration/fixtures/bom-removal/legacy-vue2.js","bundled-skills/vue3-migration/fixtures/bom-removal/target-vue3.js","bundled-skills/vue3-migration/fixtures/bootstrap-runtime-contract/legacy.js","bundled-skills/vue3-migration/fixtures/bootstrap-runtime-contract/negative-comment.vue","bundled-skills/vue3-migration/fixtures/bootstrap-runtime-contract/negative-simple.js","bundled-skills/vue3-migration/fixtures/bootstrap-runtime-contract/negative-string.js","bundled-skills/vue3-migration/fixtures/bootstrap-runtime-contract/target.js","bundled-skills/vue3-migration/fixtures/chart-wrapper-behavior/legacy.vue","bundled-skills/vue3-migration/fixtures/chart-wrapper-behavior/negative-comment.vue","bundled-skills/vue3-migration/fixtures/chart-wrapper-behavior/negative-string.vue","bundled-skills/vue3-migration/fixtures/chart-wrapper-behavior/target.vue","bundled-skills/vue3-migration/fixtures/chart-wrapper-compat/legacy-horizontal.vue","bundled-skills/vue3-migration/fixtures/chart-wrapper-compat/legacy-standard.vue","bundled-skills/vue3-migration/fixtures/chart-wrapper-compat/negative-custom.vue","bundled-skills/vue3-migration/fixtures/chart-wrapper-compat/target-horizontal.vue","bundled-skills/vue3-migration/fixtures/chart-wrapper-compat/target-standard.vue","bundled-skills/vue3-migration/fixtures/chartjs-literal-options-audit/legacy.vue","bundled-skills/vue3-migration/fixtures/chartjs-literal-options-audit/target.vue","bundled-skills/vue3-migration/fixtures/chartjs-options-audit/project/src/views/LegacyOptions.vue","bundled-skills/vue3-migration/fixtures/chartjs-options-audit/project/src/views/TargetOptions.vue","bundled-skills/vue3-migration/fixtures/chartjs-options-contract/legacy.vue","bundled-skills/vue3-migration/fixtures/chartjs-options-contract/negative-comment.vue","bundled-skills/vue3-migration/fixtures/chartjs-options-contract/negative-string.vue","bundled-skills/vue3-migration/fixtures/chartjs-options-contract/negative-thin-wrapper.vue","bundled-skills/vue3-migration/fixtures/chartjs-options-contract/target.vue","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/legacy/babel.config.js","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/legacy/package.json","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/legacy/src/main.js","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/negative-cli4/babel.config.js","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/negative-cli4/package.json","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/negative-config/babel.config.js","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/negative-config/package.json","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/negative-consumer/babel.config.js","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/negative-consumer/package.json","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/negative-consumer/src/tooling.js","bundled-skills/vue3-migration/fixtures/cli-babel-preset-ownership/target/package.json","bundled-skills/vue3-migration/fixtures/cli-compat-config/legacy.js","bundled-skills/vue3-migration/fixtures/cli-compat-config/negative-extra.js","bundled-skills/vue3-migration/fixtures/cli-compat-config/target.js","bundled-skills/vue3-migration/fixtures/compat-listener-fallthrough/legacy/src/LegacyView.vue","bundled-skills/vue3-migration/fixtures/compat-listener-fallthrough/legacy/src/main.js","bundled-skills/vue3-migration/fixtures/compat-listener-fallthrough/not-applicable/src/main.js","bundled-skills/vue3-migration/fixtures/compat-listener-fallthrough/not-applicable/src/PlainView.vue","bundled-skills/vue3-migration/fixtures/compat-listener-fallthrough/pending/src/main.js","bundled-skills/vue3-migration/fixtures/compat-listener-fallthrough/pending/src/PendingView.vue","bundled-skills/vue3-migration/fixtures/compat-listener-fallthrough/target/src/main.js","bundled-skills/vue3-migration/fixtures/compat-listener-fallthrough/target/src/TargetView.vue","bundled-skills/vue3-migration/fixtures/component-content-directive/legacy.vue","bundled-skills/vue3-migration/fixtures/component-content-directive/target.vue","bundled-skills/vue3-migration/fixtures/component-model-boundary/legacy/package.json","bundled-skills/vue3-migration/fixtures/component-model-boundary/legacy/src/AppModal.vue","bundled-skills/vue3-migration/fixtures/component-model-boundary/legacy/src/LegacyDialog.vue","bundled-skills/vue3-migration/fixtures/component-model-boundary/legacy/src/main.js","bundled-skills/vue3-migration/fixtures/component-model-boundary/legacy/src/Parent.vue","bundled-skills/vue3-migration/fixtures/component-model-boundary/negative/package.json","bundled-skills/vue3-migration/fixtures/component-model-boundary/negative/src/LegacyDialog.vue","bundled-skills/vue3-migration/fixtures/component-model-boundary/negative/src/main.js","bundled-skills/vue3-migration/fixtures/component-model-boundary/negative/src/Parent.vue","bundled-skills/vue3-migration/fixtures/component-model-boundary/target/package.json","bundled-skills/vue3-migration/fixtures/component-model-boundary/target/src/AppModal.vue","bundled-skills/vue3-migration/fixtures/component-model-boundary/target/src/LegacyDialog.vue","bundled-skills/vue3-migration/fixtures/component-model-boundary/target/src/main.js","bundled-skills/vue3-migration/fixtures/component-model-boundary/target/src/Parent.vue","bundled-skills/vue3-migration/fixtures/conditional-branch-key/legacy.vue","bundled-skills/vue3-migration/fixtures/conditional-branch-key/target.vue","bundled-skills/vue3-migration/fixtures/context-pack-minimal/ReasonPanel.vue","bundled-skills/vue3-migration/fixtures/cookie-comment-example/legacy-router.js","bundled-skills/vue3-migration/fixtures/cookie-comment-example/negative-missing-import.js","bundled-skills/vue3-migration/fixtures/cookie-comment-example/target-router.js","bundled-skills/vue3-migration/fixtures/event-bus-compat/legacy.js","bundled-skills/vue3-migration/fixtures/event-bus-compat/negative-extra.js","bundled-skills/vue3-migration/fixtures/event-bus-compat/target.js","bundled-skills/vue3-migration/fixtures/event-bus-lifecycle/legacy/src/views/Pub/dialogCheckViewDetail.vue","bundled-skills/vue3-migration/fixtures/event-bus-lifecycle/legacy/src/views/snstvaehm/snstvAutChadAdm.vue","bundled-skills/vue3-migration/fixtures/event-bus-lifecycle/target/src/views/Pub/dialogCheckViewDetail.vue","bundled-skills/vue3-migration/fixtures/event-bus-lifecycle/target/src/views/snstvaehm/snstvAutChadAdm.vue","bundled-skills/vue3-migration/fixtures/excel-upload-grid-options/legacy/src/views/ExampleExcelUpload.vue","bundled-skills/vue3-migration/fixtures/excel-upload-grid-options/negative-extra.vue","bundled-skills/vue3-migration/fixtures/excel-upload-grid-options/target/src/views/ExampleExcelUpload.vue","bundled-skills/vue3-migration/fixtures/exported-event-bus/legacy-vue2.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/listener-vue2.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/producer-vue2.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/target-listener-vue3.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/target-producer-vue3.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/target-vue3.js","bundled-skills/vue3-migration/fixtures/global-vue-filter/legacy-vue2.js","bundled-skills/vue3-migration/fixtures/global-vue-filter/target-vue3.js","bundled-skills/vue3-migration/fixtures/grid-component-bound-is-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-bound-is-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-bound-is-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-component-is-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-is-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-is-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-component-pascal-is-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-pascal-is-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-pascal-is-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-host-tag-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-host-tag-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-host-tag-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-host-tag-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-host-tag-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-host-tag-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-order-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-order-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-order-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-prop-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-prop-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-prop-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-false-conditional-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-false-conditional-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-false-conditional-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-numeric-conditional-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-numeric-conditional-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-numeric-conditional-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-true-conditional-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-true-conditional-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-true-conditional-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-order-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-order-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-order-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-pascal-case-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-pascal-case-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-pascal-case-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-bind-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-bind-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-bind-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-mixed/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-mixed/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-must-skip/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-must-skip/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-transformable/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-transformable/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-mixed/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-mixed/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-must-skip/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-must-skip/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-transformable/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-transformable/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/legacy/src/views/PrototypeView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/negative-mixin/src/views/MixinView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/negative-no-mounted/src/views/ManualView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/negative-no-rowdata/src/views/RemoteView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/negative-service/src/views/ServiceView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/negative-template-no-local-assignment/src/views/UnownedTemplateView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/negative-template-service/src/views/ServiceTemplateView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/target/src/views/PrototypeView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/template-only-legacy/src/views/TemplateOnlyView.vue","bundled-skills/vue3-migration/fixtures/missing-search-contract/template-only-target/src/views/TemplateOnlyView.vue","bundled-skills/vue3-migration/fixtures/modal-demo-scaffold/app-modal.vue","bundled-skills/vue3-migration/fixtures/modal-demo-scaffold/negative-alternate-router.js","bundled-skills/vue3-migration/fixtures/modal-demo-scaffold/negative-app-modal.vue","bundled-skills/vue3-migration/fixtures/modal-demo-scaffold/negative-nonempty.vue","bundled-skills/vue3-migration/fixtures/modal-demo-scaffold/router.js","bundled-skills/vue3-migration/fixtures/modal-demo-scaffold/target.vue","bundled-skills/vue3-migration/fixtures/modal-window-sfc/legacy-grid.vue","bundled-skills/vue3-migration/fixtures/modal-window-sfc/legacy-group.vue","bundled-skills/vue3-migration/fixtures/modal-window-sfc/negative-dynamic.vue","bundled-skills/vue3-migration/fixtures/modal-window-sfc/negative-extra-use.vue","bundled-skills/vue3-migration/fixtures/modal-window-sfc/target-grid.vue","bundled-skills/vue3-migration/fixtures/modal-window-sfc/target-group.vue","bundled-skills/vue3-migration/fixtures/module-cookie-compat/legacy-client.js","bundled-skills/vue3-migration/fixtures/module-cookie-compat/negative-remaining-vue.js","bundled-skills/vue3-migration/fixtures/module-cookie-compat/target-client.js","bundled-skills/vue3-migration/fixtures/native-activator-interaction/legacy.vue","bundled-skills/vue3-migration/fixtures/native-activator-interaction/negative-comment.vue","bundled-skills/vue3-migration/fixtures/native-activator-interaction/negative-component.vue","bundled-skills/vue3-migration/fixtures/native-activator-interaction/negative-partial-forwarding.vue","bundled-skills/vue3-migration/fixtures/native-activator-interaction/negative-string.vue","bundled-skills/vue3-migration/fixtures/native-activator-interaction/target.vue","bundled-skills/vue3-migration/fixtures/native-readonly-prop-model/legacy.vue","bundled-skills/vue3-migration/fixtures/native-readonly-prop-model/negative-array-props.vue","bundled-skills/vue3-migration/fixtures/native-readonly-prop-model/target.vue","bundled-skills/vue3-migration/fixtures/navigation-push/legacy/src/views/ExampleNavigation.vue","bundled-skills/vue3-migration/fixtures/navigation-push/negative-template-only.vue","bundled-skills/vue3-migration/fixtures/navigation-push/target/src/views/ExampleNavigation.vue","bundled-skills/vue3-migration/fixtures/nested-grid-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/nested-grid-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/nested-grid-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/ambiguous-reader.vue","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/ambiguous-writer-a.js","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/ambiguous-writer-b.js","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/guarded-target.vue","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/negative-comment-string.vue","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/non-storage.vue","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/paired-reader.vue","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/paired-writer.js","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/reader-only.vue","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/router/index.js","bundled-skills/vue3-migration/fixtures/popup-storage-audit/project/src/writer-only.js","bundled-skills/vue3-migration/fixtures/popup-storage-contract/legacy.vue","bundled-skills/vue3-migration/fixtures/popup-storage-contract/negative-comment.vue","bundled-skills/vue3-migration/fixtures/popup-storage-contract/negative-non-storage.vue","bundled-skills/vue3-migration/fixtures/popup-storage-contract/negative-string.vue","bundled-skills/vue3-migration/fixtures/popup-storage-contract/target.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/skill-draft/ignored-popup.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/eager-parent.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/guarded-parent.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/negative-comment-string.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/ready-owned-popup.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/router/index.js","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/transport-only.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/unresolved-parent.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/unsafe-popup.vue","bundled-skills/vue3-migration/fixtures/popup-widget-readiness/project/src/writer-parent.vue","bundled-skills/vue3-migration/fixtures/prelogin-runtime/legacy/src/App.vue","bundled-skills/vue3-migration/fixtures/prelogin-runtime/legacy/src/main.js","bundled-skills/vue3-migration/fixtures/prelogin-runtime/negative-comments/src/App.vue","bundled-skills/vue3-migration/fixtures/prelogin-runtime/negative-comments/src/main.js","bundled-skills/vue3-migration/fixtures/prelogin-runtime/negative-custom-menu/src/App.vue","bundled-skills/vue3-migration/fixtures/prelogin-runtime/negative-custom-menu/src/main.js","bundled-skills/vue3-migration/fixtures/prelogin-runtime/negative-duplicate/src/App.vue","bundled-skills/vue3-migration/fixtures/prelogin-runtime/negative-duplicate/src/main.js","bundled-skills/vue3-migration/fixtures/prelogin-runtime/negative-mode3/src/App.vue","bundled-skills/vue3-migration/fixtures/prelogin-runtime/negative-mode3/src/main.js","bundled-skills/vue3-migration/fixtures/prelogin-runtime/target/src/App.vue","bundled-skills/vue3-migration/fixtures/prelogin-runtime/target/src/main.js","bundled-skills/vue3-migration/fixtures/readonly-text-field-model-value/legacy.vue","bundled-skills/vue3-migration/fixtures/readonly-text-field-model-value/target.vue","bundled-skills/vue3-migration/fixtures/report-route-query-contract/legacy.vue","bundled-skills/vue3-migration/fixtures/report-route-query-contract/negative-alternate-query.vue","bundled-skills/vue3-migration/fixtures/report-route-query-contract/negative-comment.vue","bundled-skills/vue3-migration/fixtures/report-route-query-contract/negative-no-mounted-work.vue","bundled-skills/vue3-migration/fixtures/report-route-query-contract/negative-non-route.vue","bundled-skills/vue3-migration/fixtures/report-route-query-contract/negative-string.vue","bundled-skills/vue3-migration/fixtures/report-route-query-contract/partial-before-only.vue","bundled-skills/vue3-migration/fixtures/report-route-query-contract/target.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/dynamic-index.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/grid-accumulator-negative.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/grid-accumulator.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/grid-negative.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/grid-unbalanced.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/grid.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/iteration.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/mandatory.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/negative.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/optional.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/sequence.vue","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/service.js","bundled-skills/vue3-migration/fixtures/response-projection-audit/project/src/unresolved.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/alpha-bridge.js","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/bare.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/beta-bridge.js","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/bridge.js","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/direct.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/escape.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/false.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/fanout.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/idle.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/long-bridge.js","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/multiple.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/nested.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/orphan-parent.js","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/shared.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/transitive.vue","bundled-skills/vue3-migration/fixtures/response-projection-route-crosswalk/project/src/views/unreachable.vue","bundled-skills/vue3-migration/fixtures/router-current-route-ref/legacy-client.js","bundled-skills/vue3-migration/fixtures/router-current-route-ref/negative-custom.js","bundled-skills/vue3-migration/fixtures/router-current-route-ref/target-client.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/legacy-directive.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/legacy-mixed-server.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/legacy-router.vue","bundled-skills/vue3-migration/fixtures/router-directive-compat/legacy-scroll.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/legacy-server-flag.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/legacy-server-guards.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/target-directive.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/target-mixed-server.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/target-router.vue","bundled-skills/vue3-migration/fixtures/router-directive-compat/target-scroll.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/target-server-flag.js","bundled-skills/vue3-migration/fixtures/router-directive-compat/target-server-guards.js","bundled-skills/vue3-migration/fixtures/router-factory-compat/legacy-modal.js","bundled-skills/vue3-migration/fixtures/router-factory-compat/negative-custom.js","bundled-skills/vue3-migration/fixtures/router-factory-compat/target-modal.js","bundled-skills/vue3-migration/fixtures/sfc-style-comment-boundary/legacy.vue","bundled-skills/vue3-migration/fixtures/sfc-style-comment-boundary/negative-preprocessor.vue","bundled-skills/vue3-migration/fixtures/sfc-style-comment-boundary/negative-unterminated.vue","bundled-skills/vue3-migration/fixtures/sfc-style-comment-boundary/target.vue","bundled-skills/vue3-migration/fixtures/simple-vuex-store/legacy-modal.js","bundled-skills/vue3-migration/fixtures/simple-vuex-store/legacy-pure.js","bundled-skills/vue3-migration/fixtures/simple-vuex-store/negative-extra.js","bundled-skills/vue3-migration/fixtures/simple-vuex-store/target-modal.js","bundled-skills/vue3-migration/fixtures/simple-vuex-store/target-pure.js","bundled-skills/vue3-migration/fixtures/table-row-close/legacy-positive.vue","bundled-skills/vue3-migration/fixtures/table-row-close/negative-ambiguous.vue","bundled-skills/vue3-migration/fixtures/table-row-close/target-positive.vue","bundled-skills/vue3-migration/fixtures/token-semantic-split-typography/legacy.vue","bundled-skills/vue3-migration/fixtures/token-semantic-split-typography/negative-comment.vue","bundled-skills/vue3-migration/fixtures/token-semantic-split-typography/negative-dynamic.vue","bundled-skills/vue3-migration/fixtures/token-semantic-split-typography/target.vue","bundled-skills/vue3-migration/fixtures/unparseable-bootstrap/legacy-vue2.js","bundled-skills/vue3-migration/fixtures/unparseable-bootstrap/target-vue3.js","bundled-skills/vue3-migration/fixtures/v-html-children/legacy.vue","bundled-skills/vue3-migration/fixtures/v-html-children/target.vue","bundled-skills/vue3-migration/fixtures/vuetify-comment-examples/legacy.vue","bundled-skills/vue3-migration/fixtures/vuetify-comment-examples/negative-unbalanced.vue","bundled-skills/vue3-migration/fixtures/vuetify-comment-examples/target.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-mixed/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-mixed/target-vue3.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-must-skip/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-must-skip/target-vue3.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-transformable/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-transformable/target-vue3.vue","bundled-skills/vue3-migration/fixtures/vuetify-plugin/legacy.js","bundled-skills/vue3-migration/fixtures/vuetify-plugin/negative-custom-theme.js","bundled-skills/vue3-migration/fixtures/vuetify-plugin/negative-extra-plugin.js","bundled-skills/vue3-migration/fixtures/vuetify-plugin/target.js","bundled-skills/vue3-migration/fixtures/vuetify-structural-compat/invalid-grid-preservation-legacy.vue","bundled-skills/vue3-migration/fixtures/vuetify-structural-compat/invalid-grid-preservation-target.vue","bundled-skills/vue3-migration/fixtures/vuetify-structural-compat/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/vuetify-structural-compat/target-vue3.vue","bundled-skills/vue3-migration/migration-plan-document-spec.test.ts","bundled-skills/vue3-migration/profiles/low-spec-guarded.md","bundled-skills/vue3-migration/references/01-output-contract.md","bundled-skills/vue3-migration/references/02-mapping-rules.md","bundled-skills/vue3-migration/references/03-risk-and-validation.md","bundled-skills/vue3-migration/references/04-large-project-plan.md","bundled-skills/vue3-migration/references/05-vuetify2-to-3.md","bundled-skills/vue3-migration/references/06-router3-to-4.md","bundled-skills/vue3-migration/references/07-vuex-to-store.md","bundled-skills/vue3-migration/references/08-work-tier-boundaries.md","bundled-skills/vue3-migration/references/09-case-catalog.json","bundled-skills/vue3-migration/references/09-case-catalog.md","bundled-skills/vue3-migration/references/10-migration-depth-tiers.md","bundled-skills/vue3-migration/references/11-library-target-matrix.json","bundled-skills/vue3-migration/references/11-library-target-matrix.md","bundled-skills/vue3-migration/references/12-case-coverage-matrix.md","bundled-skills/vue3-migration/references/13-entry-inventory-routing.md","bundled-skills/vue3-migration/references/14-conversion-execution.md","bundled-skills/vue3-migration/references/15-scope-depth-lane-decisions.md","bundled-skills/vue3-migration/references/16-reference-recovery-index.md","bundled-skills/vue3-migration/references/17-project-file-class-coverage-matrix.md","bundled-skills/vue3-migration/references/18-vuetify-structural-compat.md","bundled-skills/vue3-migration/references/19-router-directive-compat.md","bundled-skills/vue3-migration/references/20-chart-wrapper-compat.md","bundled-skills/vue3-migration/references/21-module-cookie-compat.md","bundled-skills/vue3-migration/references/22-simple-vuex-store.md","bundled-skills/vue3-migration/references/23-router-factory-compat.md","bundled-skills/vue3-migration/references/24-v-html-children.md","bundled-skills/vue3-migration/references/25-cli-compat-config.md","bundled-skills/vue3-migration/references/26-conditional-branch-keys.md","bundled-skills/vue3-migration/references/27-table-row-close.md","bundled-skills/vue3-migration/references/28-vuetify-comment-examples.md","bundled-skills/vue3-migration/references/29-router-current-route-ref.md","bundled-skills/vue3-migration/references/30-cookie-comment-examples.md","bundled-skills/vue3-migration/references/31-event-bus-compat.md","bundled-skills/vue3-migration/references/32-readonly-text-field-model-value.md","bundled-skills/vue3-migration/references/33-modal-window-sfc-retirement.md","bundled-skills/vue3-migration/references/34-vuetify-plugin-bootstrap.md","bundled-skills/vue3-migration/references/35-app-modal-scaffold.md","bundled-skills/vue3-migration/references/36-modal-demo-scaffold.md","bundled-skills/vue3-migration/references/37-typography-token-semantic-split.md","bundled-skills/vue3-migration/references/38-bootstrap-runtime-contract.md","bundled-skills/vue3-migration/references/39-native-activator-interaction.md","bundled-skills/vue3-migration/references/40-cli-babel-preset-ownership.md","bundled-skills/vue3-migration/references/41-sfc-style-comment-boundary.md","bundled-skills/vue3-migration/references/42-native-readonly-prop-model.md","bundled-skills/vue3-migration/references/43-component-content-directive.md","bundled-skills/vue3-migration/references/44-prelogin-runtime.md","bundled-skills/vue3-migration/references/45-component-model-boundary.md","bundled-skills/vue3-migration/references/46-missing-search-contract.md","bundled-skills/vue3-migration/references/47-deterministic-replay-format.md","bundled-skills/vue3-migration/references/48-chartjs-options-contract.md","bundled-skills/vue3-migration/references/49-popup-storage-transport-contract.md","bundled-skills/vue3-migration/references/50-popup-storage-transport-audit.md","bundled-skills/vue3-migration/references/51-report-route-query-contract.md","bundled-skills/vue3-migration/references/52-compat-listener-fallthrough.md","bundled-skills/vue3-migration/references/53-popup-widget-readiness-audit.md","bundled-skills/vue3-migration/references/54-app-shell-route-audit.md","bundled-skills/vue3-migration/references/55-chartjs-literal-options-audit.md","bundled-skills/vue3-migration/references/56-ag-grid-v31-residual-audit.md","bundled-skills/vue3-migration/references/57-ag-grid-lifecycle-audit.md","bundled-skills/vue3-migration/references/58-m1-m2-fingerprint-handshake.md","bundled-skills/vue3-migration/references/59-standalone-comment-whitespace-audit.md","bundled-skills/vue3-migration/references/60-unmatched-cluster-decision-ledger.md","bundled-skills/vue3-migration/references/61-decision-record-completeness.md","bundled-skills/vue3-migration/references/62-draft-overlay-integrity.md","bundled-skills/vue3-migration/references/63-retired-package-residue-audit.md","bundled-skills/vue3-migration/references/64-chartjs-dataset-tension.md","bundled-skills/vue3-migration/references/65-chartjs-literal-axes-options.md","bundled-skills/vue3-migration/references/66-component-name-ownership.md","bundled-skills/vue3-migration/references/67-response-projection-audit.md","bundled-skills/vue3-migration/references/68-response-projection-route-crosswalk.md","bundled-skills/vue3-migration/references/69-route-evidence-coverage-audit.md","bundled-skills/vue3-migration/references/70-ag-grid-callback-prop-audit.md","bundled-skills/vue3-migration/references/71-ag-grid-callback-prop-codemod.md","bundled-skills/vue3-migration/references/72-build-warning-family-audit.md","bundled-skills/vue3-migration/references/73-m1-production-inventory-scope.md","bundled-skills/vue3-migration/references/74-lint-summary-projection.md","bundled-skills/vue3-migration/references/75-authorization-aggregate-contract.md","bundled-skills/vue3-migration/references/76-automation-residual-summary-projection.md","bundled-skills/vue3-migration/references/77-m2-execution-readiness-summary-projection.md","bundled-skills/vue3-migration/references/78-candidate-whitespace-classification.md","bundled-skills/vue3-migration/references/79-cross-owner-build-scope-alignment.md","bundled-skills/vue3-migration/references/80-external-preflight-regular-file.md","bundled-skills/vue3-migration/references/81-request-isolation-static-audit.md","bundled-skills/vue3-migration/references/82-chart-registration-composable.md","bundled-skills/vue3-migration/references/83-excel-upload-grid-options.md","bundled-skills/vue3-migration/references/84-options-api-navigation-push.md","bundled-skills/vue3-migration/references/85-migration-plan-document-spec.md","bundled-skills/vue3-migration/references/86-vite-transition-delta.md","bundled-skills/vue3-migration/references/87-bucket-c-common-layer-routing.md","bundled-skills/vue3-migration/references/88-final-target-compat-vuetify-vite.md","bundled-skills/vue3-migration/references/89-actual-project-specification.json","bundled-skills/vue3-migration/references/89-actual-project-specification.md","bundled-skills/vue3-migration/references/90-asis-replay-verification.md","bundled-skills/vue3-migration/references/91-vuetify4-cascade-layer-reset.md","bundled-skills/vue3-migration/references/rule-set.md","bundled-skills/vue3-migration/scripts/analyze_vue2_project.mjs","bundled-skills/vue3-migration/scripts/analyze_vue2_project.test.mjs","bundled-skills/vue3-migration/scripts/automation_residual_summary_audit.mjs","bundled-skills/vue3-migration/scripts/automation_residual_summary_audit.test.mjs","bundled-skills/vue3-migration/scripts/javascript_literal_url_scan.mjs","bundled-skills/vue3-migration/scripts/javascript_literal_url_scan.test.mjs","bundled-skills/vue3-migration/scripts/m1_lint_diagnostics_summary_audit.mjs","bundled-skills/vue3-migration/scripts/m1_lint_diagnostics_summary_audit.test.mjs","bundled-skills/vue3-migration/scripts/m2_execution_readiness_summary_audit.mjs","bundled-skills/vue3-migration/scripts/m2_execution_readiness_summary_audit.test.mjs","bundled-skills/vue3-migration/scripts/m2_response_projection_route_crosswalk.mjs","bundled-skills/vue3-migration/scripts/m2_response_projection_route_crosswalk.test.mjs","bundled-skills/vue3-migration/scripts/m2_route_evidence_coverage_audit.mjs","bundled-skills/vue3-migration/scripts/m2_route_evidence_coverage_audit.test.mjs","bundled-skills/vue3-migration/scripts/measure_coverage.py","bundled-skills/vue3-migration/scripts/measure_coverage.test.py","bundled-skills/vue3-migration/scripts/migrate_imports.mjs","bundled-skills/vue3-migration/scripts/parser_packages.mjs","bundled-skills/vue3-migration/scripts/response_projection_component_chain.mjs","bundled-skills/vue3-migration/scripts/response_projection_component_chain.test.mjs","bundled-skills/vue3-migration/scripts/response_projection_grid.mjs","bundled-skills/vue3-migration/scripts/response_projection_iteration.mjs","bundled-skills/vue3-migration/scripts/sanitize_source.mjs","bundled-skills/vue3-migration/scripts/sanitize_source.test.mjs","bundled-skills/vue3-migration/scripts/test_support_paths.mjs","bundled-skills/vue3-migration/scripts/validate_vue3.mjs","bundled-skills/vue3-migration/scripts/validate_vue3.py","bundled-skills/vue3-migration/scripts/validate-vue3-migration.py","bundled-skills/vue3-migration/scripts/verify_unmatched_cluster_decisions.py","bundled-skills/vue3-migration/scripts/verify_unmatched_cluster_decisions.test.py","bundled-skills/vue3-migration/scripts/vue3_acceptance_loop.mjs","bundled-skills/vue3-migration/scripts/vue3_acceptance_loop.test.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_callback_prop_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_callback_prop_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_callback_prop_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_callback_prop_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_lifecycle_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_lifecycle_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_v31_column_api_sizing_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_v31_column_api_sizing_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_v31_residual_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_ag_grid_v31_residual_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_app_modal_scaffold_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_app_modal_scaffold_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_app_shell_route_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_app_shell_route_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_asis_tobe_inventory.mjs","bundled-skills/vue3-migration/scripts/vue3_asis_tobe_inventory.test.mjs","bundled-skills/vue3-migration/scripts/vue3_authorization_aggregate_contract.mjs","bundled-skills/vue3-migration/scripts/vue3_authorization_aggregate_contract.test.mjs","bundled-skills/vue3-migration/scripts/vue3_automation.test.mjs","bundled-skills/vue3-migration/scripts/vue3_build_warning_family_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_build_warning_family_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_candidate_whitespace_classification_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_candidate_whitespace_classification_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chart_registration_common_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_chart_registration_common_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chart_wrapper_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_chart_wrapper_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_dataset_tension_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_dataset_tension_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_dataset_tension_evidence_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_dataset_tension_evidence_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_literal_axes_evidence_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_literal_axes_evidence_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_literal_axes_options_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_literal_axes_options_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_literal_options_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_literal_options_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_literal_options_freshness.test.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_options_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_chartjs_options_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_cli_babel_preset_ownership_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_cli_babel_preset_ownership_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_cli_compat_config_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_cli_compat_config_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod-gaps.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod-grid-static-literal-bound.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod-grid-static-shell.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod-vuetify-fixed-renames.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_compat_listener_fallthrough_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_compat_listener_fallthrough_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_component_content_directive_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_component_content_directive_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_component_model_boundary_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_component_model_boundary_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_component_model_boundary_dry_receipt_verify.mjs","bundled-skills/vue3-migration/scripts/vue3_component_model_boundary_dry_receipt_verify.test.mjs","bundled-skills/vue3-migration/scripts/vue3_conditional_branch_key_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_conditional_branch_key_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_context_pack.mjs","bundled-skills/vue3-migration/scripts/vue3_context_pack.test.mjs","bundled-skills/vue3-migration/scripts/vue3_cookie_comment_example_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_cookie_comment_example_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_cross_owner_build_scope_alignment_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_cross_owner_build_scope_alignment_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_decision_record_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_decision_record_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_dependent_receipt_freshness_contract.mjs","bundled-skills/vue3-migration/scripts/vue3_dependent_receipt_freshness_contract.test.mjs","bundled-skills/vue3-migration/scripts/vue3_draft_overlay_integrity.mjs","bundled-skills/vue3-migration/scripts/vue3_draft_overlay_integrity.test.mjs","bundled-skills/vue3-migration/scripts/vue3_event_bus_compat_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_event_bus_compat_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_event_bus_lifecycle_codemod.fixture.test.mjs","bundled-skills/vue3-migration/scripts/vue3_event_bus_lifecycle_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_excel_upload_grid_options_codemod.fixture.test.mjs","bundled-skills/vue3-migration/scripts/vue3_excel_upload_grid_options_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_file_class_skill_routing.mjs","bundled-skills/vue3-migration/scripts/vue3_forward_acceptance_contract.test.mjs","bundled-skills/vue3-migration/scripts/vue3_inventory_build_input_scope.test.mjs","bundled-skills/vue3-migration/scripts/vue3_inventory_dependency_coverage.test.mjs","bundled-skills/vue3-migration/scripts/vue3_inventory_output_exclusion.test.mjs","bundled-skills/vue3-migration/scripts/vue3_inventory.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-auth-persistence-contract.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-bootstrap-runtime-contract.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-chart-wrapper-behavior.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-chartjs-options-contract.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-grid-topology-pair.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-native-activator-interaction.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-popup-storage-contract.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-report-route-query-contract.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-token-semantic-split.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons.mjs","bundled-skills/vue3-migration/scripts/vue3_legacy_server_runtime_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_legacy_server_runtime_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_m1_m2_preflight_report.mjs","bundled-skills/vue3-migration/scripts/vue3_m1_m2_preflight_report.test.mjs","bundled-skills/vue3-migration/scripts/vue3_migrate.mjs","bundled-skills/vue3-migration/scripts/vue3_migrate.py","bundled-skills/vue3-migration/scripts/vue3_missing_search_contract_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_missing_search_contract_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_modal_demo_scaffold_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_modal_demo_scaffold_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_modal_window_sfc_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_modal_window_sfc_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_module_cookie_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_module_cookie_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_native_readonly_prop_model_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_native_readonly_prop_model_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_navigation_push_codemod.fixture.test.mjs","bundled-skills/vue3-migration/scripts/vue3_navigation_push_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_next_inventory_output_exclusion.test.mjs","bundled-skills/vue3-migration/scripts/vue3_next.mjs","bundled-skills/vue3-migration/scripts/vue3_no_owner_rules.mjs","bundled-skills/vue3-migration/scripts/vue3_popup_storage_transport_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_popup_storage_transport_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_popup_widget_readiness_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_popup_widget_readiness_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_prelogin_runtime_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_prelogin_runtime_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_readonly_text_field_model_value_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_readonly_text_field_model_value_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_request_isolation_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_request_isolation_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_response_projection_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_response_projection_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_retired_package_residue_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_retired_package_residue_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_router_current_route_ref_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_router_current_route_ref_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_router_directive_compat_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_router_directive_compat_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_router_factory_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_router_factory_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_safe_batch.mjs","bundled-skills/vue3-migration/scripts/vue3_safe_batch.test.mjs","bundled-skills/vue3-migration/scripts/vue3_sfc_style_comment_boundary_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_sfc_style_comment_boundary_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_simple_vuex_store_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_simple_vuex_store_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_skillwire_report_2026-08-24.md","bundled-skills/vue3-migration/scripts/vue3_standalone_comment_whitespace_audit.mjs","bundled-skills/vue3-migration/scripts/vue3_standalone_comment_whitespace_audit.test.mjs","bundled-skills/vue3-migration/scripts/vue3_table_row_close_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_table_row_close_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_task_specs.mjs","bundled-skills/vue3-migration/scripts/vue3_template_quoted_attribute_boundary_probe.mjs","bundled-skills/vue3-migration/scripts/vue3_template_quoted_attribute_boundary_probe.test.mjs","bundled-skills/vue3-migration/scripts/vue3_v_html_children_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_v_html_children_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_vuetify_button_variant_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_vuetify_button_variant_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_vuetify_comment_example_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_vuetify_comment_example_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_vuetify_compat_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_vuetify_compat_codemod.test.mjs","bundled-skills/vue3-migration/scripts/vue3_vuetify_plugin_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_vuetify_plugin_codemod.test.mjs","bundled-skills/vue3-migration/skill-split.test.ts","bundled-skills/vue3-migration/SKILL.md","bundled-skills/vue3-migration/split-complete-prelude-render.test.ts","bundled-skills/vue3-migration/split-decision-boundary.test.ts","bundled-skills/vue3-migration/split-output-guidance.test.ts","bundled-skills/vue3-migration/split-question-answers.test.ts","bundled-skills/vue3-migration/split-reader-walk.test.ts","bundled-skills/vue3-migration/split-reference-transition.test.ts","bundled-skills/vue3-migration/split-router-contract.test.ts","bundled-skills/vue3-migration/split-routing.test.ts","bundled-skills/vue3-migration/split-self-contained.test.ts","bundled-skills/vue3-migration/split-tier-guidance.test.ts","bundled-skills/vue3-migration/split-transition-pointers.test.ts","check-llm-server.sh","connect_mcpapi.cmd","connect_mcpapi.js","connect_mcpapi.sh","default-NJH.md","default-settings.json","demo/.gitignore","demo/njh-demo-api/package.json","demo/njh-demo-api/README.md","demo/njh-demo-api/SCENARIOS.md","demo/njh-demo-api/server.js","demo/njh-demo-api/uploads/welcome.log","demo/njh-demo-convert/abc.vue","demo/njh-demo-convert/SCENARIOS.md","demo/njh-demo-convert/wless/wlessUsageDailyCret.py","demo/njh-demo-convert/wlessUsageDailyCretJob.py","demo/njh-demo-depgraph/app/order_api.py","demo/njh-demo-depgraph/customer/customer_policy.py","demo/njh-demo-depgraph/expected-output/이력기록-예시.md","demo/njh-demo-depgraph/expected-output/DEPENDENCY_GRAPH.md","demo/njh-demo-depgraph/expected-output/dependency-graph.html","demo/njh-demo-depgraph/inventory/inventory_service.py","demo/njh-demo-depgraph/order/order_service.py","demo/njh-demo-depgraph/README.md","demo/njh-demo-depgraph/SCENARIOS.md","demo/njh-demo-depgraph/settlement/settlement_service.py","demo/njh-demo-depgraph/shared/domain_model.py","demo/njh-demo-docs/raw/결제_장애_0701.log","demo/njh-demo-docs/raw/결제_취소_이중처리.log","demo/njh-demo-docs/raw/결제_한도_초과_이슈.log","demo/njh-demo-docs/raw/로그인_소셜_연동.log","demo/njh-demo-docs/raw/로그인_실패율_급증.log","demo/njh-demo-docs/raw/로그인_이슈_추적.log","demo/njh-demo-docs/raw/사양변경_결제화면.log","demo/njh-demo-docs/raw/알림_중복발송_원인분석.log","demo/njh-demo-docs/raw/알림서버_점검_회의.log","demo/njh-demo-docs/raw/야간배치_스케줄_변경.log","demo/njh-demo-docs/raw/인프라_점검_random.log","demo/njh-demo-docs/raw/주간회의_0706.log","demo/njh-demo-docs/raw/회의록_긴급_0702.log","demo/njh-demo-docs/raw/auth-2fa-rollout.log","demo/njh-demo-docs/raw/auth-service-spec-memo.log","demo/njh-demo-docs/raw/auth-token-expiry-notes.log","demo/njh-demo-docs/raw/batch-데이터_정합성.log","demo/njh-demo-docs/raw/batch-정산-지연.log","demo/njh-demo-docs/raw/batch-job-error-dump.log","demo/njh-demo-docs/raw/batch-retry-policy.log","demo/njh-demo-docs/raw/db-connection-pool-issue.log","demo/njh-demo-docs/raw/demo-node-deploy-log-scrap.log","demo/njh-demo-docs/raw/incident-0710-mixed.log","demo/njh-demo-docs/raw/incident-20260703-notify.log","demo/njh-demo-docs/raw/meeting-notes-payment-2026.log","demo/njh-demo-docs/raw/misc-logs-tail.log","demo/njh-demo-docs/raw/monthly-close-batch.log","demo/njh-demo-docs/raw/notify-server-scaling.log","demo/njh-demo-docs/raw/notify-template-변경.log","demo/njh-demo-docs/raw/ops-oncall-handover.log","demo/njh-demo-docs/raw/payment-gateway-timeout.log","demo/njh-demo-docs/raw/payment-refund-bug.log","demo/njh-demo-docs/raw/PG_연동_변경사항.log","demo/njh-demo-docs/raw/postmortem-draft-payment.log","demo/njh-demo-docs/raw/push-token-cleanup.log","demo/njh-demo-docs/raw/scratch-메모-이것저것.log","demo/njh-demo-docs/raw/sms-발송_실패.log","demo/njh-demo-docs/raw/sso-migration-memo.log","demo/njh-demo-docs/raw/system-ops-random-notes.log","demo/njh-demo-docs/raw/TODO_결제팀.log","demo/njh-demo-docs/raw/TODO_backlog_mixed.log","demo/njh-demo-docs/raw/weekly-sync-0713.log","demo/njh-demo-docs/README.md","demo/njh-demo-docs/SCENARIOS.md","demo/njh-demo-playbook.html","demo/njh-demo-vue-migration/app.js","demo/njh-demo-vue-migration/index.html","demo/njh-demo-vue-migration/README.md","demo/njh-demo-vue-migration/SCENARIOS.md","demo/njh-demo-vue-migration/serve.js","demo/njh-demo-vue-migration/vendor/vue2.global.js","demo/njh-demo-vue-migration/vendor/vue3.global.js","demo/README.md","dist/njh-cli.js","docs/로컬LLM-임베딩OCR-슬라이드.html","docs/로컬LLM-통합-운영문서.html","docs/사용자/01-빠른-시작.md","docs/사용자/02-설치-및-업데이트.md","docs/사용자/03-기본-사용법.md","docs/사용자/04-문제-해결.md","docs/사용자/05-배포-번들-검증.md","docs/사용자/06-인증서-문제-해결.md","docs/사용자/06-post-import-first-30-minutes.md","docs/사용자/게이트-연결-테스트.md","docs/사용자/릴리스노트-v1.5.409.md","docs/사용자/릴리스노트-v1.5.477.md","docs/사용자/릴리스노트-v1.5.554.md","docs/사용자/서버-운영-가이드.md","docs/사용자/설치가이드.html","docs/사용자/통합-설치가이드.html","docs/사용자/devai-연동조사.md","docs/사용자/devai-연동조사.ps1","docs/사용자/devai-조사.sh","docs/사용자/devai-호출규격-조사.sh","docs/사용자/examples/one-model-agents.js","docs/사용자/index.html","docs/사용자/nexus-라이브러리-조사.md","docs/사용자/nexus-라이브러리-조사.ps1","docs/사용자/nexus-라이브러리-조사.sh","docs/사용자/OpenAI-서버-전송.md","docs/사용자/openai-local-ollama.settings.json","docs/사용자/TUI-시연-가이드.md","docs/사용자/vue3-분석킷.mjs","docs/사용자/vue3-실측.mjs","docs/타겟점검-AI-고도화-검토보고.html","docs/폐쇄망-배포-운영-가이드.md","docs/canonical-import-kit-recipient-acceptance.md","docs/codi-playground-prompt-main.md","docs/codi-playground-prompt-mini.md","docs/field-verification-체크리스트.md","docs/import-guide.md","docs/measurements/recipient-original-v1-semantic-oracle.md","docs/merge-hub-recovery.md","docs/njh-cli-도입검토-발표.html","docs/njh-cli-소개-발표-amber.html","docs/njh-cli-소개-발표-cyan.html","docs/njh-cli-소개-발표-violet.html","docs/njh-cli-소개-발표.html","docs/njh-cli-통합문서.html","docs/ollama-prompt-cache-operations.md","docs/presentation/captures-2026-08-02/00-full-session.png","docs/presentation/captures-2026-08-02/01-natural-request.png","docs/presentation/captures-2026-08-02/02-source-discovery.png","docs/presentation/captures-2026-08-02/03-approval-diff.png","docs/presentation/captures-2026-08-02/04-final-summary.png","docs/presentation/captures-2026-08-02/05-result-file.png","docs/presentation/captures-2026-08-02/06-pk-impact-analysis.png","docs/presentation/captures-2026-08-02/del_yn-01-request.png","docs/presentation/captures-2026-08-02/del_yn-02-read-context.png","docs/presentation/captures-2026-08-02/del_yn-03-approval-diff.png","docs/presentation/captures-2026-08-02/del_yn-04-result.png","docs/presentation/captures-2026-08-02/pk-impact-analysis.png","docs/presentation/captures/01-request-input.png","docs/presentation/captures/02-tool-call.png","docs/presentation/captures/03-result-summary.png","docs/presentation/captures/04-file-created.png","docs/presentation/captures/05-open-result.png","docs/presentation/captures/06-completion-report.png","docs/presentation/njh-2slide-ppt2013-safe.html","docs/presentation/njh-2slide-rich.html","docs/presentation/njh-2slide-static.html","docs/presentation/njh-2slide-v2.pptx","docs/presentation/njh-slide1-v2.pptx","docs/skill-selection.md","docs/tools-reference/agent-concurrency.md","docs/tools-reference/agent.md","docs/tools-reference/backend-portability-verification.md","docs/tools-reference/connection-profiles.md","docs/tools-reference/consolidate-merge.md","docs/tools-reference/delete_file.md","docs/tools-reference/describe_tool.md","docs/tools-reference/diff_apply.md","docs/tools-reference/edit_file.md","docs/tools-reference/goal.md","docs/tools-reference/headless-approval.md","docs/tools-reference/http_request.md","docs/tools-reference/list_directory.md","docs/tools-reference/load_skill.md","docs/tools-reference/make_directory.md","docs/tools-reference/memory_get.md","docs/tools-reference/memory_search.md","docs/tools-reference/mission.md","docs/tools-reference/njh-api-doctor.md","docs/tools-reference/read_file.md","docs/tools-reference/read_json_schema.md","docs/tools-reference/read_symbol.md","docs/tools-reference/request_user_input.md","docs/tools-reference/run_command.md","docs/tools-reference/runner-output.md","docs/tools-reference/search_files.md","docs/tools-reference/search_grep.md","docs/tools-reference/search_replace.md","docs/tools-reference/sql_query.md","docs/tools-reference/stat_path.md","docs/tools-reference/tool_search.md","docs/tools-reference/verify-gateway-upgrade.md","docs/tools-reference/workflow.md","docs/tools-reference/write_file.md","docs/unified-gateway-client-setup.md","docs/USER_SETTINGS.md","njh","njh.cmd","njh.ps1","package.json","README.md","representative-task-readiness.json","scripts/create-windows-shortcut.ps1","scripts/create-windows-shortcut.sh","scripts/field-verification/field-verification.env.example.invalid","scripts/field-verification/run-field-verification.sh","scripts/fixtures/recipient-measurement/original-multirule-expected-v1.json","scripts/fixtures/recipient-measurement/original-multirule-prompt-v1.txt","scripts/fixtures/recipient-measurement/original-multirule-source-v1.json","scripts/install-bundled-skills.mjs","scripts/local-llm-import/diagnose-model.sh","scripts/local-llm-import/lib/runner-profile.sh","scripts/local-llm-import/ollama-memwatch.sh","scripts/local-llm-import/ollama-start.sh","scripts/local-llm-import/ollama-status.sh","scripts/local-llm-import/ollama-stop.sh","scripts/local-llm-import/setup-backend.sh","scripts/local-llm-import/setup-model.sh","scripts/merge-terminal-config.cjs","scripts/merge-terminal-config.sh","scripts/njh-api-doctor.cmd","scripts/njh-api-doctor.mjs","scripts/njh-api-doctor.sh","scripts/njh-connect-doctor.cmd","scripts/njh-connect-doctor.mjs","scripts/njh-connect-doctor.sh","scripts/njh-settings-json-diagnosis.mjs","scripts/njh-toolcall-doctor.sh","scripts/recipient-original-v1-semantic-oracle.mjs","scripts/restore-terminal-config.sh","settings-mcpapi.example.json","settings-unified-gateway.example.json","setup.cmd","setup.ps1","setup.sh"],"archiveRootLayoutVerified":true,"archiveManifestVerified":true,"archiveExclusionsVerified":true,"archiveLauncherInstallerVerified":true,"archiveCliExecuted":true,"archiveCliVersion":"1.5.554","archiveCliBytes":2364725,"archiveSha256":"446aa225ea73938ce73d62c44dd1497df8f5ae467e792bc2371f0d67cd4eb2f8","archiveBytes":20237938,"archiveEntryCount":990,"archiveUncompressedBytes":37520092,"archiveListedSuccessfully":true,"previousArchive":null,"previousEntryCount":null,"previousUncompressedBytes":null}

stderr:
    (empty)

### Run C5 recipient archive gate

Command: `npx --no-install tsx scripts/verify-c5-recipient-archive.ts /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-cli-v1.5.554.7z`
Exit status: `0`

stdout:
    {"archivePath":"/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-cli-v1.5.554.7z","version":"1.5.554","extractedFileCount":990,"supportedShells":["bash","zsh"],"unsupportedShell":"fish","guideDocumentCount":78}

stderr:
    (empty)

### Build Gateway archive

Command: `npx --no-install tsx scripts/build-gateway-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-gateway-v1.5.554.7z --json`
Exit status: `0`

stdout:
    {"version":"1.5.554","out":"/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-gateway-v1.5.554.7z","fileCount":93,"files":["설치가이드-통합.html","통합-설치가이드.html","backend-kit/cleanup-legacy.sh","backend-kit/diagnose-model.sh","backend-kit/gemma4-12b-model-manifest.json","backend-kit/ollama-memwatch.sh","backend-kit/ollama-model-residency-operations.md","backend-kit/ollama-start.sh","backend-kit/ollama-status.sh","backend-kit/ollama-stop.sh","backend-kit/qwen2.5-coder-7b-model-manifest.json","backend-kit/runner-profile.sh","backend-kit/setup-backend.sh","backend-kit/setup-model.sh","bootstrap-import.sh","db-query.sh","diagnostics/admit-ollama-model.mjs","diagnostics/apply-embed-migrations.mjs","diagnostics/check-from-pc.sh","diagnostics/check-store-integrity.mjs","diagnostics/collect-logs.sh","diagnostics/diagnose.sh","diagnostics/diagnostic-helpers.sh","diagnostics/e2e-gap1-policy.cjs","diagnostics/e2e-smoke.sh","diagnostics/gateway-3node-loadtest.md","diagnostics/gateway-3node-loadtest.mjs","diagnostics/measure-ap-embed-envelope.mjs","diagnostics/measure-ap-readiness.mjs","diagnostics/measure-gateway.mjs","diagnostics/migrations/001-cm-embed-schema.sql","diagnostics/migrations/002-cm-ocr-schema.sql","diagnostics/migrations/003-cm-ocr-match-schema.sql","diagnostics/migrations/004-cm-target-inspection-schema.sql","diagnostics/migrations/005-cm-target-inspection-runner.sql","diagnostics/redact-diagnostics.cjs","diagnostics/rehearse-embed-gateway-loopback.mjs","diagnostics/snapshot-native-store-integrity.mjs","diagnostics/trusted-receipt-smoke.mjs","docs/설치-원페이지.md","docs/embedding-gateway.md","docs/field-operations-guide.md","docs/FIELD-TEST-CHECKLIST.md","docs/README.md","embed-gateway-smoke.sh","gateway-build.json","host-capacity-preflight.sh","import-guide.md","import-model-store.mjs","import-model-store.sh","install-all.sh","install-node-runtime.sh","match/client/concurrency-gate.mjs","match/client/contract.schema.json","match/client/match_records.mjs","match/client/mcp-server.mjs","match/client/schema-validator.mjs","match/docs/match-service-operations.md","match/ops/diagnose-match-gateway.sh","match/ops/match-gateway.env.example","match/ops/match-pipeline-schema-map.example.invalid","match/ops/njh-custom-tool-match_records.example.json","match/ops/njh-settings-mcp.example.json","match/ops/start-match-gateway.sh","match/ops/stop-match-gateway.sh","match/runtime/njh-match-gateway.js","node-runtime/node-linux-arm64.tar.gz","node-runtime/node-linux-x64.tar.gz","node-runtime/SHA256SUMS","ocr-gateway-smoke.sh","ops/deploy-guide.json","ops/deploy.sh","ops/restart.sh","ops/start.sh","ops/status.sh","ops/stop.sh","ops/unload-idle-ollama-models.mjs","ops/verify-upgrade.mjs","ops/with-user-bashrc-env.sh","quick-install.sh","runtime/embed-gateway-settings.example.json","runtime/njh-cli.js","runtime/njh-embed-gateway.js","runtime/njh-gateway.js","runtime/njh-ocr-gateway.js","runtime/ocr-gateway-settings.example.json","runtime/settings.example.json","setup-embed-gateway.sh","setup-gateway.sh","setup-ocr-engine.sh","setup-ocr-gateway.sh","site.env.example","synthetic-application-form.png"],"modes":{"설치가이드-통합.html":420,"통합-설치가이드.html":420,"backend-kit/cleanup-legacy.sh":493,"backend-kit/diagnose-model.sh":493,"backend-kit/gemma4-12b-model-manifest.json":420,"backend-kit/ollama-memwatch.sh":493,"backend-kit/ollama-model-residency-operations.md":420,"backend-kit/ollama-start.sh":493,"backend-kit/ollama-status.sh":493,"backend-kit/ollama-stop.sh":493,"backend-kit/qwen2.5-coder-7b-model-manifest.json":420,"backend-kit/runner-profile.sh":420,"backend-kit/setup-backend.sh":493,"backend-kit/setup-model.sh":493,"bootstrap-import.sh":493,"db-query.sh":493,"diagnostics/admit-ollama-model.mjs":493,"diagnostics/apply-embed-migrations.mjs":493,"diagnostics/check-from-pc.sh":493,"diagnostics/check-store-integrity.mjs":493,"diagnostics/collect-logs.sh":493,"diagnostics/diagnose.sh":493,"diagnostics/diagnostic-helpers.sh":420,"diagnostics/e2e-gap1-policy.cjs":420,"diagnostics/e2e-smoke.sh":493,"diagnostics/gateway-3node-loadtest.md":420,"diagnostics/gateway-3node-loadtest.mjs":493,"diagnostics/measure-ap-embed-envelope.mjs":493,"diagnostics/measure-ap-readiness.mjs":493,"diagnostics/measure-gateway.mjs":493,"diagnostics/migrations/001-cm-embed-schema.sql":420,"diagnostics/migrations/002-cm-ocr-schema.sql":420,"diagnostics/migrations/003-cm-ocr-match-schema.sql":420,"diagnostics/migrations/004-cm-target-inspection-schema.sql":420,"diagnostics/migrations/005-cm-target-inspection-runner.sql":420,"diagnostics/redact-diagnostics.cjs":420,"diagnostics/rehearse-embed-gateway-loopback.mjs":493,"diagnostics/snapshot-native-store-integrity.mjs":493,"diagnostics/trusted-receipt-smoke.mjs":493,"docs/설치-원페이지.md":420,"docs/embedding-gateway.md":420,"docs/field-operations-guide.md":420,"docs/FIELD-TEST-CHECKLIST.md":420,"docs/README.md":420,"embed-gateway-smoke.sh":493,"gateway-build.json":420,"host-capacity-preflight.sh":493,"import-guide.md":420,"import-model-store.mjs":493,"import-model-store.sh":493,"install-all.sh":493,"install-node-runtime.sh":493,"match/client/concurrency-gate.mjs":420,"match/client/contract.schema.json":420,"match/client/match_records.mjs":493,"match/client/mcp-server.mjs":493,"match/client/schema-validator.mjs":420,"match/docs/match-service-operations.md":420,"match/ops/diagnose-match-gateway.sh":493,"match/ops/match-gateway.env.example":420,"match/ops/match-pipeline-schema-map.example.invalid":420,"match/ops/njh-custom-tool-match_records.example.json":420,"match/ops/njh-settings-mcp.example.json":420,"match/ops/start-match-gateway.sh":493,"match/ops/stop-match-gateway.sh":493,"match/runtime/njh-match-gateway.js":493,"node-runtime/node-linux-arm64.tar.gz":420,"node-runtime/node-linux-x64.tar.gz":420,"node-runtime/SHA256SUMS":420,"ocr-gateway-smoke.sh":493,"ops/deploy-guide.json":420,"ops/deploy.sh":493,"ops/restart.sh":493,"ops/start.sh":493,"ops/status.sh":493,"ops/stop.sh":493,"ops/unload-idle-ollama-models.mjs":493,"ops/verify-upgrade.mjs":493,"ops/with-user-bashrc-env.sh":493,"quick-install.sh":493,"runtime/embed-gateway-settings.example.json":420,"runtime/njh-cli.js":493,"runtime/njh-embed-gateway.js":493,"runtime/njh-gateway.js":493,"runtime/njh-ocr-gateway.js":493,"runtime/ocr-gateway-settings.example.json":420,"runtime/settings.example.json":420,"setup-embed-gateway.sh":493,"setup-gateway.sh":493,"setup-ocr-engine.sh":493,"setup-ocr-gateway.sh":493,"site.env.example":420,"synthetic-application-form.png":420},"contentManifestSha256":"f74087da09ca699d42c48be8e0fb2a54e12cd89e3c9660ad75e6d329b38c7139","serverImportArtifact":"njh-gateway-v1.5.554.tar.gz","serverImportSha256":"936fa414600f62b77dc5faadcbdb5697b3704a1710275d14535979838c26c10f","serverImportBytes":89743883,"outerFileCount":1,"outerFiles":["njh-gateway-v1.5.554.tar.gz"],"archiveSha256":"0590c649c89d41c1fdbd498cc5ae91748b156dbd240073eeb66d061b2c497b62","archiveBytes":89243443,"distBannerVersion":"1.5.554","distFreshnessChecked":true,"buildArtifactSourceManifestSha256":"662be2613c51e9201c7192e4609e43cfd1265c50c83d17b2ddd1d4f5bd4e0b86","buildArtifactManifestSha256":"16fe08698d49863a6f4bf01260abf36b19b94ed67a96e869acbc76b5a5284c98","shippedRuntimeManifestSha256":"76810dac6bf669dffa452f8c902cd837eaba00e0fb47d89c4a7a74babd807cbc","latestBuildInputPath":"tsup.config.ts","latestBuildInputMtimeMs":1788684279428.1223,"distMtimeMs":1788688623224.0178}

stderr:
    (empty)

### Run Gateway recipient archive gate

Command: `npx --no-install tsx scripts/verify-c5-recipient-archive.ts --gateway /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-gateway-v1.5.554.7z`
Exit status: `0`

stdout:
    {"archivePath":"/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-gateway-v1.5.554.7z","version":"1.5.554","extractedFileCount":93,"outerFileCount":1,"documentFileCountClaims":7}

stderr:
    (empty)

### Build Windows laptop archive

Command: `npx --no-install tsx scripts/build-windows-laptop-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-win-laptop-v1.5.554.7z --json`
Exit status: `0`

stdout:
    {
      "archivePath": "/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-win-laptop-v1.5.554.7z",
      "files": [
        "통합-설치가이드.html",
        "default-NJH.md",
        "default-settings.json",
        "gateway-ollama-settings.example.json",
        "import-model-store.mjs",
        "import-model-store.sh",
        "laptop-guide.html",
        "local-ollama-NJH.md",
        "local-ollama-settings.json",
        "measure-igpu-ab.sh",
        "measure-laptop.sh",
        "njh-cli.js",
        "optimize-laptop-memory.sh",
        "README.md",
        "recorded-ollama-generate.json",
        "recorded-ollama-tags.json",
        "setup-local-llm.sh",
        "start-local-llm.sh",
        "stress-gpu-limit.sh",
        "tune-gpu-ctx.sh",
        "upgrade-ollama.sh",
        "verify-local-llm.sh"
      ],
      "totalBytes": 3541648,
      "buildArtifactIdentity": {
        "schemaVersion": 1,
        "sourceInputManifestSha256": "662be2613c51e9201c7192e4609e43cfd1265c50c83d17b2ddd1d4f5bd4e0b86",
        "artifactManifestSha256": "16fe08698d49863a6f4bf01260abf36b19b94ed67a96e869acbc76b5a5284c98",
        "shippedRuntimeManifestSha256": "f5584e980c92adadbca426348444037ee2f689ed17a913b52060a865707c0cf6",
        "artifacts": [
          {
            "archivePath": "njh-cli.js",
            "bytes": 2364725,
            "sha256": "0459500b1d258cc02ecae15d851a8849c49e138985fc39b31b114187da5f5dd7"
          }
        ]
      },
      "version": "1.5.554"
    }

stderr:
    (empty)

### Run Windows laptop recipient archive gate

Command: `npx --no-install tsx scripts/verify-laptop-recipient-archive.ts /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-win-laptop-v1.5.554.7z --manifest /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/laptop-build.json`
Exit status: `0`

stdout:
    {"archivePath":"/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/njh-win-laptop-v1.5.554.7z","extractedFileCount":22,"buildArtifactSourceManifestSha256":"662be2613c51e9201c7192e4609e43cfd1265c50c83d17b2ddd1d4f5bd4e0b86","buildArtifactManifestSha256":"16fe08698d49863a6f4bf01260abf36b19b94ed67a96e869acbc76b5a5284c98","shippedRuntimeManifestSha256":"f5584e980c92adadbca426348444037ee2f689ed17a913b52060a865707c0cf6","shippedCliBytes":2364725,"shippedCliSha256":"0459500b1d258cc02ecae15d851a8849c49e138985fc39b31b114187da5f5dd7"}

stderr:
    (empty)

### Run automatic package safety gate

Command: `npx --no-install tsx scripts/verify-release-package-safety.ts --package-dir /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56 --report /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/package-build-evidence.md --version 1.5.554 --out /Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/safety-gate.json --json`
Exit status: `0`

stdout:
    {"schema_version":1,"status":"pass","report":"/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56/package-build-evidence.md","package_directory":"/Users/nam64/njh-kits/package-pickup-2026-09-06-v1.5.554-1353ffb4af56","version":"1.5.554","packages":[{"kind":"cli","status":"pass","artifact":"njh-cli-v1.5.554.7z","version":"1.5.554","expected_sha256":"446aa225ea73938ce73d62c44dd1497df8f5ae467e792bc2371f0d67cd4eb2f8","actual_sha256":"446aa225ea73938ce73d62c44dd1497df8f5ae467e792bc2371f0d67cd4eb2f8","expected_bytes":20237938,"actual_bytes":20237938,"version_markers":{"dist/njh-cli.js":"1.5.554"},"scanned_text_files":964,"scanned_text_bytes":11892914,"scanned_binary_files":26,"leak_hits":0},{"kind":"gateway","status":"pass","artifact":"njh-gateway-v1.5.554.7z","version":"1.5.554","expected_sha256":"0590c649c89d41c1fdbd498cc5ae91748b156dbd240073eeb66d061b2c497b62","actual_sha256":"0590c649c89d41c1fdbd498cc5ae91748b156dbd240073eeb66d061b2c497b62","expected_bytes":89243443,"actual_bytes":89243443,"version_markers":{"runtime/njh-cli.js":"1.5.554","runtime/njh-gateway.js":"1.5.554"},"scanned_text_files":180,"scanned_text_bytes":11241714,"scanned_binary_files":7,"leak_hits":0},{"kind":"win-laptop","status":"pass","artifact":"njh-win-laptop-v1.5.554.7z","version":"1.5.554","expected_sha256":"4baf7d37c8e674d354540749d8eed17729e83f78b1596c05dada0d216591eb41","actual_sha256":"4baf7d37c8e674d354540749d8eed17729e83f78b1596c05dada0d216591eb41","expected_bytes":1994528,"actual_bytes":1994528,"version_markers":{"njh-cli.js":"1.5.554"},"scanned_text_files":22,"scanned_text_bytes":3541648,"scanned_binary_files":0,"leak_hits":0}]}

stderr:
    (empty)
